# Teameeting-MsgServer

./: .gitignore
MsgServer/MsgServer/: Makefile.am
MsgServer/MsgServerClient/: ClientManager.h  Makefile.am  MsgServerClient.cpp  main.cpp
MsgServer/MsgServerConnector/: CRTConnManager.cpp  CRTConnManager.h  CRTConnector.cpp  CRTConnector.h  CRTDispatchConnection.cpp  Makefile.am  main.cpp
MsgServer/MsgServerDaemon/: DRTDaemon.cpp  DRTDaemon.h  Makefile.am  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerDaemon/DRTServerManager/: DRTServerLauncher.cpp  DRTServerLauncher.h  DRTServerManager.cpp  DRTServerManager.h  DRTServerSession.cpp  DRTServerSession.h
MsgServer/MsgServerDaemon/daemon/: daemon.conf  daemon.sh  install.sh  params.conf
MsgServer/MsgServerDispatcher/: DRTConnDispatcher.h  DRTConnManager.cpp  DRTConnManager.h  DRTDispatcher.cpp  DRTDispatcher.h  DRTMsgQueue.cpp  DRTMsgQueue.h  Makefile.am  main.cpp
MsgServer/MsgServerGrouper/: GRTConnDispatcher.h  GRTConnManager.cpp  GRTConnManager.h  GRTGrouper.cpp  GRTGrouper.h  GRTGrouperManager.cpp  GRTGrouperManager.h  Makefile.am  main.cpp
MsgServer/MsgServerLogical/: LRTConnDispatcher.h  LRTConnManager.cpp  LRTConnManager.h  LRTLogical.cpp  LRTLogical.h  LRTLogicalManager.cpp  LRTLogicalManager.h  Makefile.am  main.cpp
MsgServer/MsgServerMeeting/: MRTConnDispatcher.h  MRTConnManager.cpp  MRTConnManager.h  MRTMeeting.cpp  MRTMeeting.h  MRTMeetingRoom.cpp  MRTMeetingRoom.h  MRTRoomDispatcher.h  MRTRoomManager.cpp  MRTRoomManager.h  Makefile.am  (+1 more)
MsgServer/zkclient_so/: config.h  config.h.in~  configure  configure.ac  libtool
MsgServer/zkclient_so/build_out/lib/: libzksdk.la
MsgServer/zkclient_so/conf/: anyrtc.conf
MsgServer/zkclient_so/include/: RTUtils.hpp  RTZKClient.hpp  ZKClt.h
MsgServer/zkclient_so/include/common/include/: zk_client.h
MsgServer/zkclient_so/src/: Makefile.am  Makefileamaa  Makefileamso  RTProcessInfo.cpp  RTProcessInfo.lo  RTSingleton.lo  RTUtils.cpp  RTUtils.lo  RTZKClient.cpp  RTZKClient.lo  ZKClt.cpp  ZKClt.lo  libzksdk.la
MsgServer/zkclient_so/src/.deps/: RTProcessInfo.Plo  RTSingleton.Plo  RTUtils.Plo  RTZKClient.Plo  ZKClient.Plo  ZKClt.Plo
MsgServer/zkclient_so/src/.libs/: libzksdk.la
MsgServer/zkclient_so/test/: build.sh  main.cpp  makefile
MsgServer/zkclient_so/test/anyrtc/: anyrtc.sh  install.sh
MsgServer/zkclient_so/test/anyrtc/lib/: libzksdk.so.0  libzksdk.so.0.0.0
(+304 files in other folders)
